# aipaze

./: CONTRIBUTE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
aipaze/: __init__.py  adapters.py  client.py  memory.py  metrics.py  middleware.py  prompt_templates.py  resources.py  server.py  tools.py  utils.py  validation.py  vector_store.py  workflow.py
examples/: AIPazeDemo.py  ToolsExample.py  WeatherLLM.py
