[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build"

[project]
name = "aipaze"
version = "0.1.0"
authors = [{ name = "Vishal Singh Baraiya", email = "realvixhal@gmail.com" }]
description = "A framework for connecting LLMs to external tools and data sources"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "websockets",
    "pydantic",
    "numpy",
    "requests",
    "aiohttp",
    "openai",
    "sentence-transformers",
    "faiss-cpu",
    "transformers",
    "huggingface",
    "pytest",
    "black",
    "flake8",
    "mypy",
]
license = "MIT" 
keywords = ["artificial intelligence", "llm", "tools", "framework", "api", "data", "ai", "server"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]